# Serializer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  abstractserializer.cpp  abstractserializer.h  binaryserializer.cpp  binaryserializer.h  jsonserializer.cpp  jsonserializer.h  serializer_global.h  sqlserializer.cpp  sqlserializer.h  src.pri  src.pro  stringserializer.cpp  stringserializer.h  xmlserializer.cpp  xmlserializer.h
test/: CMakeLists.txt  test.pro
test/.qmake2cmake/: subdir-of
test/basic/: CMakeLists.txt  basic.pro  tst_basic.cpp
test/containers/: CMakeLists.txt  containers.pro  foo.cpp  foo.h  tst_containers.cpp
test/containers/.qmake2cmake/: subdir-of
test/containersChildren/: CMakeLists.txt  child.cpp  child.h  foo.cpp  foo.h  parent.cpp  parent.h  tst_containers.cpp
test/enums/: CMakeLists.txt  enums.pro  foo.cpp  foo.h  tst_enums.cpp
test/object/: CMakeLists.txt  boo.cpp  boo.h  foo.cpp  foo.h  object.pro  tst_object.cpp
test/variants/: CMakeLists.txt  foo.cpp  foo.h  tst_variants.cpp  variants.pro
